--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,28 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
-input{
+
+input {
     width: 300px;
     height: 40px;
     margin-top: 16px;
+    border: 1px solid #eaeaea;
+    border-radius: 5px;
+    padding: 12px 14px;
+
 }
-input::placeholder{
+
+input::placeholder {
     font-family: "Cera Pro", sans-serif;
     font-weight: 400;
     font-size: 14px;
     line-height: 114%;
     color: #a5a5a5;
 }
-a{
+
+a {
     font-family: "Cera Pro", sans-serif;
     font-weight: 500;
     font-size: 13px;
@@ -24,52 +31,108 @@ a{
     text-align: center;
     text-decoration: none;
 }
-.loginLinks{
+
+.loginLinks {
     width: 300px;
     height: 40px;
     border: 1px solid #eaeaea;
     border-radius: 5px;
-    display: block;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
-.loginLinks:first-of-type{
+
+.loginLinks:first-of-type {
     margin-top: 27px;
     margin-bottom: 15px;
 }
-#regTitle{
+
+#regTitle {
     font-family: "Cera Pro", sans-serif;
     font-weight: 400;
     font-size: 13px;
     line-height: 123%;
     color: #3d3d3d;
 }
-span{
-    color:#46a358;
+
+span {
+    color: #46a358;
 }
-button{
+
+button {
     background-color: #46a358;
     color: white;
     border-radius: 5px;
     width: 300px;
     height: 45px;
     margin-top: 41px;
+    text-align: center;
 }
-button:hover{
+
+button:hover {
     transition: 0.5s;
     background-color: #55B267;
 }
-.modal{
+
+.modal {
     max-width: 500px;
     margin: auto;
-    padding-top: 52px;
+    padding: 52px 100px 40px;
+
 }
-.regTitle{
+
+.regTitle {
     margin-top: 36px;
     margin-bottom: 27px;
     margin-left: 100px;
 }
-.textReg{
+
+.textReg {
     margin-top: 40px;
     margin-bottom: 14px;
 }
 
+.chromeLogo {
+    margin-right: 9px;
+    height: 20px;
+    width: 20px;
+}
 
+.facebookLogo {
+    margin-right: 4px;
+    height: 20px;
+    width: 20px;
+}
+
+.container {
+    max-width: 1200px;
+    margin: auto;
+}
+
+header {
+    padding-top: 31px;
+}
+
+.login_btn {
+    border-radius: 6px;
+    background: #46a358;
+    text-decoration: none;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    padding: 7px 17px;
+}
+
+header .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+header ul {
+    display: flex;
+    align-items: center;
+}
