--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@
     width: 20px;
 }
 
-.container {
+.container_header {
     max-width: 1200px;
     margin: auto;
 }
@@ -122,7 +122,7 @@
     color: #fff;
 }
 
-header .container {
+header .container_header {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -147,7 +147,7 @@ header ul {
 }
 
 .links_nav:hover {
-    transition: 0.5s;
+    transition: 0.2s;
     font-weight: 700;
     color: #3d3d3d;
     border-bottom: #46a358;
