--- a/css/style.css
+++ b/css/style.css
@@ -107,6 +107,8 @@
 .container_header {
     max-width: 1200px;
     margin: auto;
+    border-bottom: 0.30px solid rgba(70, 163, 88, 0.5);
+    padding-bottom: 18px;
 }
 
 .login_link_index {
@@ -145,15 +147,18 @@ header ul {
     text-decoration: none;
 
 }
+
 .links_nav:hover {
     transition: 0.2s;
     font-weight: 700;
     color: #3d3d3d;
     border-bottom: #46a358;
 }
-.logout_img{
+
+.logout_img {
     margin-right: 1px;
 }
-.links_nav_li{
-    margin-right: 50px;
+
+.links_nav_ul {
+    gap: 50px;
 }
