--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,73 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'cera_round_pro_demobold';
+    src: url('../fonts/ceraroundprodemo-bold-webfont.eot');
+    src: url('../fonts/ceraroundprodemo-bold-webfont.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/ceraroundprodemo-bold-webfont.woff2') format('woff2'),
+    url('../fonts/ceraroundprodemo-bold-webfont.woff') format('woff'),
+    url('../fonts/ceraroundprodemo-bold-webfont.ttf') format('truetype'),
+    url('../fonts/ceraroundprodemo-bold-webfont.svg#cera_round_pro_demobold') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'cera_round_pro_demoblack';
+    src: url('../fonts/ceraroundprodemo-black-webfont.eot');
+    src: url('../fonts/ceraroundprodemo-black-webfont.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/ceraroundprodemo-black-webfont.woff2') format('woff2'),
+    url('../fonts/ceraroundprodemo-black-webfont.woff') format('woff'),
+    url('../fonts/ceraroundprodemo-black-webfont.ttf') format('truetype'),
+    url('../fonts/ceraroundprodemo-black-webfont.svg#cera_round_pro_demoblack') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'cera_round_pro_demolight';
+    src: url('../fonts/ceraroundprodemo-light-webfont.eot');
+    src: url('../fonts/ceraroundprodemo-light-webfont.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/ceraroundprodemo-light-webfont.woff2') format('woff2'),
+    url('../fonts/ceraroundprodemo-light-webfont.woff') format('woff'),
+    url('../fonts/ceraroundprodemo-light-webfont.ttf') format('truetype'),
+    url('../fonts/ceraroundprodemo-light-webfont.svg#cera_round_pro_demolight') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+@font-face {
+    font-family: 'cera_round_pro_demomedium';
+    src: url('../fonts/ceraroundprodemo-medium-webfont.eot');
+    src: url('../fonts/ceraroundprodemo-medium-webfont.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/ceraroundprodemo-medium-webfont.woff2') format('woff2'),
+    url('../fonts/ceraroundprodemo-medium-webfont.woff') format('woff'),
+    url('../fonts/ceraroundprodemo-medium-webfont.ttf') format('truetype'),
+    url('../fonts/ceraroundprodemo-medium-webfont.svg#cera_round_pro_demomedium') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+@font-face {
+    font-family: 'cera_round_pro_demothin';
+    src: url('../fonts/ceraroundprodemo-thin-webfont.eot');
+    src: url('../fonts/ceraroundprodemo-thin-webfont.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/ceraroundprodemo-thin-webfont.woff2') format('woff2'),
+    url('../fonts/ceraroundprodemo-thin-webfont.woff') format('woff'),
+    url('../fonts/ceraroundprodemo-thin-webfont.ttf') format('truetype'),
+    url('../fonts/ceraroundprodemo-thin-webfont.svg#cera_round_pro_demothin') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 * {
     padding: 0;
     margin: 0;
@@ -119,8 +186,9 @@
 .container_header {
     max-width: 1200px;
     margin: auto;
-    border-bottom: 0.30px solid rgba(70, 163, 88, 0.5);
+    border-bottom: 0.3px solid rgba(70, 163, 88, 0.5);
     padding-bottom: 18px;
+
 }
 
 .login_link_index {
@@ -130,10 +198,23 @@
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    padding: 7px 17px;
+    padding: 8px 17px 7px;
     font-weight: 500;
     font-size: 16px;
     color: #fff;
+    width: 100px;
+    height: 35px;
+    font-family: 'cera_round_pro_demomedium';
+}
+
+.login_link_index:before {
+    background-image: url("../images/Logout.svg");
+    display: inline-flex;
+    width: 20px;
+    height: 20px;
+    content: "";
+    margin: 7px 4px 9px 0;
+
 }
 
 header .container_header {
@@ -157,23 +238,104 @@ header ul {
     font-size: 16px;
     color: #3d3d3d;
     text-decoration: none;
-
 }
 
 .links_nav:hover {
     transition: 0.2s;
     font-weight: 700;
     color: #3d3d3d;
-    border-bottom: #46a358;
+    font-family: 'cera_round_pro_demobold';
 }
 
-.logout_img {
-    margin-right: 1px;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-}
 
 .links_nav_ul {
     gap: 50px;
 }
+
+.container_main {
+    max-width: 1200px;
+    margin: 12px auto auto;
+}
+
+.first_section {
+    display: flex;
+    align-items: center;
+    background: linear-gradient(135deg, rgba(245, 245, 245, 0.5) 0%, rgba(245, 245, 245, 0.5) 100%);
+    justify-content: space-between;
+}
+
+.welcome_info {
+    max-width: 693px;
+
+    flex: 1;
+}
+
+.first_section_flowers {
+    max-width: 507px;
+    flex: 1;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.first_section_flowers img {
+    max-width: 100%;
+    height: auto;
+}
+
+.planet_title {
+    color: #46a358;
+}
+
+.welcome_info h1 {
+    font-weight: 900;
+    font-size: 70px;
+    line-height: 100%;
+    text-transform: uppercase;
+    color: #3d3d3d;
+    font-family: 'cera_round_pro_demoblack';
+    margin-left: 40px;
+}
+
+.welcome_info h3 {
+    margin-left: 43px;
+}
+
+.welcome_info h3:first-of-type {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 114%;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+    color: #3d3d3d;
+    margin-bottom: 7px;
+    font-family: 'cera_round_pro_demomedium';
+}
+
+.welcome_info h3:nth-of-type(2) {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 171%;
+    color: #727272;
+    margin-top: 5px;
+    font-family: 'cera_round_pro_demoregular';
+}
+
+.welcome_info a {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 125%;
+    text-transform: uppercase;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 6px;
+    padding: 11px 27px 9px 26px;
+    background: #46a358;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    margin: 44px 0 0 41px;
+    font-family: 'cera_round_pro_demobold';
+}
+
+
+
