--- a/css/style.css
+++ b/css/style.css
@@ -241,6 +241,22 @@ header ul {
     text-align: center;
 }
 
+.links_nav_ul li:first-of-type {
+    min-width: 45px;
+}
+
+.links_nav_ul li:nth-of-type(2) {
+    min-width: 38px;
+}
+
+.links_nav_ul li:nth-of-type(3) {
+    min-width: 79px;
+}
+
+.links_nav_ul li:nth-of-type(4) {
+    min-width: 42px;
+}
+
 
 .links_nav_ul *:hover {
     transition: 0.2s;
@@ -339,33 +355,38 @@ main {
 }
 
 .catalog {
-    margin-top: 171px;
+    display: flex;
     max-width: 1200px;
+    margin-top: 171px;
+    justify-content: space-between;
+    gap: 50px;
 }
 
-.catalog div:first-of-type {
-    background: #fbfbfb;
+.catalog_first_block {
     width: 310px;
-    height: 774px;
-    padding-top: 14px;
+    height: 1244px;
 }
 
-.catalog h3:first-of-type {
+.catalog_first_block div:first-of-type {
+    background: #fbfbfb;
+    height: 774px;
+}
+
+.catalog_first_block div:first-of-type h3 {
+    padding: 14px 0 7px 18px;
     font-family: 'cera_round_pro_demobold';
     font-weight: 700;
     font-size: 18px;
     line-height: 89%;
     color: #3d3d3d;
-    margin: 0 0 7px 18px;
+
 }
 
-.catalog ul *:active {
-    font-family: 'cera_round_pro_demobold';
-    font-weight: 700;
-    color: #46a358;
+.catalog_first_block div:first-of-type ul {
+    padding-left: 30px;
 }
 
-.catalog ul * {
+.catalog_first_block div:first-of-type ul * {
     font-family: 'cera_round_pro_demoregular';
     font-weight: 400;
     color: #3d3d3d;
@@ -373,8 +394,99 @@ main {
     line-height: 267%;
 }
 
-.catalog ul {
-    margin-left: 30px;
+.catalog_first_block div:first-of-type ul *:hover {
+    font-family: 'cera_round_pro_demobold';
+    font-weight: 700;
+    color: #46a358;
+}
+
+.catalog_second_block {
+    max-width: 890px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.catalog_second_block_head {
+    width: 890px;
+    height: 23px;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+.catalog_second_block_head ul {
+    display: flex;
+    align-items: center;
+    gap: 38px;
+}
+
+.catalog_second_block_head ul * {
+    font-family: 'cera_round_pro_demoregular';
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 107%;
+    color: #3d3d3d;
+}
+
+.catalog_second_block_head ul *:hover {
+    font-family: 'cera_round_pro_demobold';
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 107%;
+    color: #46a358;
+}
+
+.catalog_second_block_head ul li:first-of-type {
+    min-width: 66px;
+}
+
+.catalog_second_block_head ul li:nth-of-type(2) {
+    min-width: 88px;
+}
+
+.catalog_second_block_head ul li:nth-of-type(3) {
+    min-width: 29px;
+}
+
+.catalog_second_block_head p {
+    font-family: 'cera_round_pro_demoregular';
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 107%;
+    color: #3d3d3d;
+    display: inline-flex;
+    align-items: center;
+}
+
+.catalog_second_block_head p:after {
+    background-image: url("../images/Arrow - Down 2.svg");
+    display: inline-flex;
+    width: 16px;
+    height: 16px;
+    content: "";
+    margin-left: 5px;
+}
+
+.cards_of_items div {
+    width: 258px;
+    height: 350px;
+}
+
+.cards_of_items {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    max-width: 840px;
+    gap: 10px;
+}
+
+.cards_of_items div div {
+    height: 300px;
+    background: #fbfbfb;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 
