--- a/css/style.css
+++ b/css/style.css
@@ -513,6 +513,7 @@ main {
     height: 35px;
     align-items: center;
     gap: 10px;
+    margin: 90px 0 94px 0;
 }
 
 .catalog_second_block_links li {
@@ -560,5 +561,48 @@ main {
 .container_third_section {
     max-width: 1200px;
     margin: auto;
+    display: flex;
+    justify-content: space-between;
+    gap: 28px;
 }
 
+.container_third_section article {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    max-width: 586px;
+    text-align: right;
+    background: #fbfbfb;
+}
+
+.container_third_section h3 {
+    font-family: 'cera_round_pro_demoblack';
+    font-size: 18px;
+    line-height: 133%;
+    text-transform: uppercase;
+    color: #3d3d3d;
+}
+
+.container_third_section p {
+    font-family: 'cera_round_pro_demoregular';
+    font-size: 14px;
+    line-height: 171%;
+    text-align: right;
+    color: #727272;
+    margin: 9px 0 25px 0;
+}
+
+.container_third_section a {
+    border-radius: 6px;
+    width: 140px;
+    height: 40px;
+    background: #46a358;
+    text-decoration: none;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.container_third_section a:after {
+
+}
