--- a/css/style.css
+++ b/css/style.css
@@ -531,6 +531,12 @@ main {
     display: flex;
     gap: 10px;
     align-items: center;
+    opacity: 0;
+    transition: 0.4s;
+}
+
+.cards_of_items article:hover .ul_buttons {
+    opacity: 1;
 }
 
 .ul_buttons li {
@@ -608,6 +614,7 @@ main {
     margin: 12px 0 6px 0;
 }
 
+
 .cards_of_items article img {
     width: 250px;
     height: 250px;
@@ -616,6 +623,15 @@ main {
 .cards_of_items article img[src='images/beach_spider_lily.png'] {
     width: 224px;
     height: 286px;
+}
+
+.sale_prise {
+    font-family: 'cera_round_pro_demoregular';
+    font-size: 18px;
+    line-height: 89%;
+    color: #a5a5a5;
+    text-decoration: line-through;
+    margin-left: 15px;
 }
 
 .cards_of_items article p:nth-of-type(2) {
@@ -876,3 +892,222 @@ main {
     margin-top: 2px;
 }
 
+.container_pre_footer {
+    max-width: 1200px;
+    display: flex;
+    flex-direction: column;
+}
+
+.info_part_container_pre_footer {
+    display: flex;
+    background: #fbfbfb;
+}
+
+.info_part_container_pre_footer article p {
+    font-family: 'cera_round_pro_demoregular';
+    font-size: 14px;
+    line-height: 157%;
+    color: #727272;
+}
+
+.info_part_container_pre_footer article h3 {
+    font-family: 'cera_round_pro_demobold';
+    font-size: 17px;
+    line-height: 94%;
+    color: #3d3d3d;
+    margin-top: 15px;
+    margin-bottom: 9px;
+}
+
+.info_part_container_pre_footer article:first-of-type img {
+    width: 77px;
+    height: 95px;
+}
+
+.info_part_container_pre_footer article:nth-of-type(2) img {
+    width: 83px;
+    height: 93px;
+}
+
+.info_part_container_pre_footer article:last-of-type img {
+    width: 90px;
+    height: 92px;
+}
+
+.info_part_container_pre_footer article {
+    width: 204px;
+    margin: 24px 0;
+}
+
+.info_part_container_pre_footer article:first-of-type {
+    margin-left: 25px;
+    position: relative;
+}
+
+.info_part_container_pre_footer article:first-of-type:after {
+    content: "";
+    display: block;
+    width: 187px;
+    height: 1px;
+    background: rgba(70, 163, 88, 0.1);
+    transform: rotate(90deg);
+    position: absolute;
+    left: calc(50% + 40px);
+    top: 50%;
+}
+
+.info_part_container_pre_footer article:nth-of-type(2) {
+    margin-left: 61px;
+    margin-right: 61px;
+    position: relative;
+}
+
+.info_part_container_pre_footer article:last-of-type {
+    margin-right: 62px;
+}
+
+.info_part_container_pre_footer article:nth-of-type(2):after {
+    content: "";
+    display: block;
+    width: 187px;
+    height: 1px;
+    background: rgba(70, 163, 88, 0.1);
+    transform: rotate(90deg);
+    position: absolute;
+    left: calc(50% + 40px);
+    top: 50%;
+}
+
+.info_part_container_pre_footer div {
+    width: 354px;
+    margin-top: 37px;
+}
+
+.info_part_container_pre_footer div h3 {
+    font-family: 'cera_round_pro_demobold';
+    font-size: 18px;
+    line-height: 89%;
+    color: #3d3d3d;
+    margin-bottom: 25px;
+}
+
+.info_part_container_pre_footer div p {
+    font-family: 'cera_round_pro_demoregular';
+    font-size: 13px;
+    line-height: 169%;
+    color: #727272;
+    margin-top: 18px;
+    margin-bottom: 25px;
+}
+
+.info_part_container_pre_footer form {
+    border-radius: 6px;
+    width: 354px;
+    height: 40px;
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.06);
+    background: #fff;
+    overflow: hidden;
+    display: flex;
+}
+
+.info_part_container_pre_footer input {
+    background-color: transparent;
+    border: none;
+    height: 40px;
+    width: calc(354px - 85px);
+    padding: 12px 0 12px 11px;
+}
+
+.info_part_container_pre_footer input::placeholder {
+    font-family: 'cera_round_pro_demoregular';
+    font-size: 14px;
+    line-height: 114%;
+    color: #acacac;
+}
+
+.info_part_container_pre_footer button {
+    font-family: 'cera_round_pro_demobold';
+    font-size: 18px;
+    line-height: 89%;
+    color: #fff;
+    border: 0;
+    width: 85px;
+    height: 40px;
+    background: #46a358;
+}
+
+
+.contacts_part_container_pre_footer {
+    background: linear-gradient(90deg, #edf6ef 0%, #52c368 100%);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 25px 22px 20px 23px;
+}
+
+
+.contacts_part_container_pre_footer p {
+    font-family: 'cera_round_pro_demoregular';
+    font-size: 14px;
+    line-height: 157%;
+    color: #3d3d3d;
+}
+
+.pre_footer_address {
+    display: flex;
+}
+
+.pre_footer_address:before {
+    content: "";
+    background-image: url("../images/Location.svg");
+    width: 20px;
+    height: 20px;
+    background-repeat: no-repeat;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 13px;
+}
+
+.pre_footer_phone {
+    text-decoration: none;
+    font-family: 'cera_round_pro_demoregular';
+    font-size: 14px;
+    line-height: 157%;
+    color: #3d3d3d;
+}
+
+.pre_footer_email {
+    text-decoration: none;
+    font-family: 'cera_round_pro_demoregular';
+    font-size: 14px;
+    line-height: 157%;
+    color: #3d3d3d;
+}
+
+.pre_footer_email:before {
+    content: "";
+    background-image: url("../images/Message.svg");
+    width: 20px;
+    height: 20px;
+    display: inline-flex;
+    background-repeat: no-repeat;
+    position: absolute;
+    left: -28px;
+}
+
+.pre_footer_phone:before {
+    content: "";
+    background-image: url("../images/Calling.svg");
+    width: 20px;
+    height: 20px;
+    display: inline-flex;
+    background-repeat: no-repeat;
+    position: absolute;
+    left: -28px;
+}
+
+.contacts_part_container_pre_footer img[src='images/logo.svg'] {
+    width: 150px;
+    height: 34px;
+}
