--- a/css/style.css
+++ b/css/style.css
@@ -1127,6 +1127,7 @@ main {
     margin: auto;
     padding: 33px 155px 0 25px;
     justify-content: space-between;
+    border-bottom: 1px solid rgba(70, 163, 88, 0.2);
 }
 
 .footer_container a {
@@ -1234,4 +1235,15 @@ main {
     line-height: 89%;
     color: #3d3d3d;
     margin-bottom: 13px;
+}
+
+
+.rights_reserved {
+    font-family: 'cera_round_pro_demoregular';
+    font-size: 14px;
+    line-height: 214%;
+    color: #3d3d3d;
+    margin-top: 6px;
+    text-align: center;
+    margin-bottom: 22px;
 }
